# cpsc-312-lecture-code

./: .editorconfig  .gitignore  .replit  Lecture1.lhs  Lecture1.md  Lecture2.lhs  Lecture2.md  Lecture3.lhs  Lecture3.md  Lecture4.lhs  Lecture4.md  Lecture5.lhs  Lecture5.md  Lecture6.lhs  Lecture6.md  Main.hs  Makefile  README.md  cabal.sandbox.config  lecture.cabal  package.yaml  stack.yaml
.cabal-sandbox/: add-source-timestamps
.cabal-sandbox/lib/x86_64-linux-ghc-8.6.5/random-1.2.0-34VvsK8CpZG1VOu2QdV8qX/System/: Random.dyn_hi  Random.hi
.cabal-sandbox/lib/x86_64-linux-ghc-8.6.5/random-1.2.0-34VvsK8CpZG1VOu2QdV8qX/System/Random/: Internal.dyn_hi  Internal.hi  Stateful.dyn_hi  Stateful.hi
.cabal-sandbox/lib/x86_64-linux-ghc-8.6.5/splitmix-0.1.0.3-EyfRYyweSOi6qa3nGYeyF6/Data/Bits/: Compat.dyn_hi  Compat.hi
.cabal-sandbox/lib/x86_64-linux-ghc-8.6.5/splitmix-0.1.0.3-EyfRYyweSOi6qa3nGYeyF6/System/Random/: SplitMix.dyn_hi  SplitMix.hi  SplitMix32.dyn_hi  SplitMix32.hi
.cabal-sandbox/lib/x86_64-linux-ghc-8.6.5/splitmix-0.1.0.3-EyfRYyweSOi6qa3nGYeyF6/System/Random/SplitMix/: Init.dyn_hi  Init.hi
.cabal-sandbox/x86_64-linux-ghc-8.6.5-packages.conf.d/: package.cache  random-1.2.0-34VvsK8CpZG1VOu2QdV8qX.conf  splitmix-0.1.0.3-EyfRYyweSOi6qa3nGYeyF6.conf
.dummy/: Main.hs
