name:                lecture
version:             0.1.0.0
synopsis:            Code for CPSC 312 Lectures
description:         Code for CPSC 312 Lectures
homepage:            https://github.com/steven-wolfman/cpsc-312-lecture-code#readme
author:              Steve Wolfman
maintainer:          wolf@cs.ubc.ca
copyright:           2021 Steve Wolfman
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules: Lecture1
                  , Lecture2
  -- Modules included in this library but not exported.
  -- other-modules:
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base >= 4.7 && < 5
                  , random
  default-language: Haskell2010

executable lecture
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
