name:                lecture
version:             0.1.0.0
synopsis:            Code for CPSC 312 Lectures
description:         Code for CPSC 312 Lectures
homepage:            https://github.com/steven-wolfman/cpsc-312-lecture-code#readme
author:              Steve Wolfman
maintainer:          wolf@cs.ubc.ca
copyright:           2021 Steve Wolfman
category:            Education
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules: Lecture1
                 , Lecture2
  build-depends:   base >= 4.7 && < 5
                 , random
  build-tool-depends: doctest:doctest
  default-language: Haskell2010
